--- a/src/components/AddMovie.module.css
+++ b/src/components/AddMovie.module.css
@@ -1,12 +1,38 @@
 /* AddMovie.module.css */
 .addMovieForm {
-    background-color: white;
+    /* background-color: white;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    text-align: center; */
+     /* margin: 2rem;
+    padding: 5rem; 
+    list-style: none;
+    
+    background-color: #f2eff5;
+    box-shadow: 0 0px 0px rgba(0, 0, 0, 0.00);
+    border-radius: 56px;
     text-align: center;
+    color:black;
+    align-items: center; */
+    margin: 1rem auto;
+  width: 90%;
+  max-width: 40rem;
+  text-align: center;
+  background-color: white;
+  padding: 2rem;
+  border-radius: 12px;
+  color: black;
+  
   }
+  .label{
+    display: block;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    text-align: left;
+  }
+  
   
   .addMoviesButton {
     font: inherit;
